fix scroll stuck

--- a/src/pages/PaidWalk/PaidWalk.module.scss
+++ b/src/pages/PaidWalk/PaidWalk.module.scss
@@ -81,7 +81,5 @@
 
 .wrapper {
 	background: #11141d;
-	height: 100vh;
-
-	overflow-y: auto;
+	min-height: 100vh;
 }
